@@ -22,3 +22,5 @@ exportMethods(setSecure)
 exportMethods(setUserName)
 importFrom(rJava,.jlong)
 importFrom(rJava,.jnew)
+import(methods)
+import(Myrrixjars)
