@@ -1,3 +1,11 @@
+                CHANGES IN in VERSION 1.2 (2017-11-16)
+
+    o    Update in order to handle Java version 9
+    
+                CHANGES IN in VERSION 1.1 (2013-12-12)
+
+    o    Changes regarding CRAN policies (vignette directory + changes in imports/depends)
+
                 CHANGES IN in VERSION 1.0 (2013-07-16)
 
     o    Initial version of the package
